--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ edition = "2018"
 tobj = "3.2.0"
 image = "0.23.14"
 rayon = "1.5.1"
+serde = {version = "1.0", features = ["derive"]}
+serde_json = "1.0"
+rand = "0.6.5"
